--- a/FrontEnd/frontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/frontEnd/src/app/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
   <li> <a routerLink="/matchHistory"> Match History</a></li> <!-- link works -->
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
-  <li style="float:right"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-  <li style="float:right"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+  <li style="float:right"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> <!--if the user already knows they don't have and account.-->
+  <li style="float:right"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> <!--if the think they do but dont it will create one automatily.--> 
 </ul>
     
